--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-  <span [routerLink]="['/product-page']"><a class="navbar-brand" >Home</a></span>
+  <span [routerLink]="['/product-page']"><a class="navbar-brand" style="cursor: pointer;">Home</a></span>
 </nav>
 
 
